bk_ida/gccida/g1/get_frame_alias_set
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_frame_alias_set/src/alias.c:1186:6: error: use of undeclared identifier 'set_2'; did you mean 'set_of'?
if ( set_2 == -1 ) 
     ^~~~~
     set_of
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_frame_alias_set/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_frame_alias_set/src/alias.c:1187:1: error: use of undeclared identifier 'set_2'
set_2 = new_alias_set( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_frame_alias_set/src/alias.c:1188:8: error: use of undeclared identifier 'set_2'; did you mean 'set_of'?
return set_2; 
       ^~~~~
       set_of
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_frame_alias_set/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_frame_alias_set/src/obj/alias.o] Error 1
